$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.90-1 (opened July 3, 2011)

	* metaMDSrotate: results could be a bit off with NA in
	environmental vector and >2D solution. The starting scores must be
	orthogonal, but the initial orthogonalizing PCA was run without
	removing NA cases.

	* ordiellipse, ordihull, ordispider: will remove NA scores that
	can appear with na.action in cca/rda/capscale (and perhaps in
	other cases).

	* betadiver: argument 'index' was renamed to 'method' for
	compatibility with dist() objects. Argument 'index' is
	still recognized with a warning.

	* metaMDS: Documentation and interface adapted to monoMDS().
	Argument 'noshare' defaults to FALSE with monoMDS(), since tie
	breaking seem to handle tied maximum dissimilarities even better
	than stepacross(). For 'engine = "monoMDS"' 'noshare' defaults to
	TRUE. The 'noshare' argument now accepts logical arguments in
	addition to old numeric (FALSE worked previously because it was
	interpreted as numeric 0, but TRUE has now meaningful
	interpretation). Remove argument 'old.wa' introduced in rev280 on
	24/3/08 for backward compatibility when calculating WA scores
	started to use the same transformed data as analysed.
	 
Version 1.90-0 (closed July 3, 2011)

	* vegan now depends on the permute package for new permutation
	designs. This initially version strips out all the old "new"
	permutation code from the R and Rd files, and patches up
	permutest.betadisper to use shuffle() to generate permutations.

	The 1.90-0 devel series will lead the way to vegan 2.0-0. There
	may well be build problems as we iron out permute / vegan
	meshing.

	* capscale: could not be embedded in another function after fixing
	the update() in 1.18-31 -- problems were anticipated in ChangeLog,
	and they were realized.

	* monoMDS: text for a proper help (Rd file). Other help files
	updated for monoMDS. Stress type 2 is printed both in monoMDS and